charts/yaml/app-preview.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: primeapps-app-preview
  namespace: primeapps
  labels:
    k8s-app: "primeapps-app-preview"
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: primeapps-app-preview
  template:
    metadata:
      labels:
        k8s-app: primeapps-app-preview
    spec:
      containers:
        - name: primeapps-app-preview
          image: gcr.io/primeapps/primeapps-app/debian:5.19.084.4
---
kind: Service
apiVersion: v1
metadata:
  name: primeapps-app-preview-service
spec:
  type: "ClusterIP"
  selector:
    k8s-app: primeapps-app-preview
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 80
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: primeapps-app-preview-ingress
  namespace: primeapps
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - preview.primeapps.io
      secretName: primeapps-wildcard
  rules:
    - host: preview.primeapps.io
      http:
        paths:
          - path: "/"
            backend:
              serviceName: primeapps-app-preview-service
              servicePort: 80
# kind: Service
# apiVersion: v1
# metadata:
#   name: primeapps-app-preview-service
#   annotations:
#     service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:eu-west-1:557655860736:certificate/5be35ad7-a512-4028-9fac-c4ca1e268080"
#     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
#     service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
# spec:
#   type: "LoadBalancer"
#   selector:
#     k8s-app: primeapps-app-preview
#   ports:
#     - name: "http"
#       protocol: TCP
#       port: 80
#       targetPort: 80
#     - name: "https"
#       protocol: TCP
#       port: 443
#       targetPort: 80
