charts/yaml/app.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: primeapps-app
  namespace: primeapps
  labels:
    k8s-app: "primeapps-app"
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: primeapps-app
  template:
    metadata:
      labels:
        k8s-app: primeapps-app
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: primeapps-app
          image: gcr.io/primeapps/primeapps-app/debian:5.19.093.1
---
kind: Service
apiVersion: v1
metadata:
  name: primeapps-app-service
spec:
  type: "ClusterIP"
  selector:
    k8s-app: primeapps-app
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 80
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: primeapps-app-ingress
  namespace: primeapps
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - app.primeapps.io
      secretName: primeapps-wildcard-ssl
  rules:
    - host: app.primeapps.io
      http:
        paths:
          - path: "/"
            backend:
              serviceName: primeapps-app-service
              servicePort: 80
