charts/yaml/auth-preview.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: primeapps-auth-preview
  namespace: primeapps
  labels:
    k8s-app: "primeapps-auth-preview"
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: primeapps-auth-preview
  template:
    metadata:
      labels:
        k8s-app: primeapps-auth-preview
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: primeapps-auth-preview
          image: gcr.io/primeapps/primeapps-auth/debian:5.19.088.1
---
kind: Service
apiVersion: v1
metadata:
  name: primeapps-auth-preview-service
spec:
  type: "ClusterIP"
  selector:
    k8s-app: primeapps-auth-preview
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 80
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: primeapps-auth-preview-ingress
  namespace: primeapps
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - auth-preview.primeapps.io
      secretName: primeapps-wildcard-ssl
  rules:
    - host: auth-preview.primeapps.io
      http:
        paths:
          - path: "/"
            backend:
              serviceName: primeapps-auth-preview-service
              servicePort: 80
