charts/yaml/auth.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: primeapps-auth
  namespace: primeapps
  labels:
    k8s-app: "primeapps-auth"
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: primeapps-auth
  template:
    metadata:
      labels:
        k8s-app: primeapps-auth
    spec:
      volumes:
        - name: "self-signed-ssl"
          secret:
            secretName: primeapps-auth-test-selfsigned-ssl
      containers:
        - name: primeapps-auth
          image: primeapps/primeapps-auth:1.19.132.2-debian
          volumeMounts:
            - mountPath: "/etc/self-signed-ssl"
              name: self-signed-ssl
---
kind: Service
apiVersion: v1
metadata:
  name: primeapps-auth-service
  namespace: primeapps
spec:
  type: "ClusterIP"
  selector:
    k8s-app: primeapps-auth
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 80
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: primeapps-auth-ingress
  namespace: primeapps
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-snippet: |-
      add_header X-Robots-Tag "noindex, nofollow";
spec:
  tls:
    - hosts:
        - auth.primeapps.io
      secretName: primeapps-wildcard-ssl
  rules:
    - host: auth.primeapps.io
      http:
        paths:
          - path: "/"
            backend:
              serviceName: primeapps-auth-service
              servicePort: 80
