charts/yaml/studio.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: primeapps-studio
  namespace: primeapps
  labels:
    k8s-app: "primeapps-studio"
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: primeapps-studio
  template:
    metadata:
      labels:
        k8s-app: primeapps-studio
    spec:
      volumes:
        - name: git-storage
          emptyDir: {}
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: primeapps-studio
          image: gcr.io/primeapps/primeapps-studio/debian:1.19.093.1
---
kind: Service
apiVersion: v1
metadata:
  name: primeapps-studio-service
spec:
  type: "ClusterIP"
  selector:
    k8s-app: primeapps-studio
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 80
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: primeapps-studio-ingress
  namespace: primeapps
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - studio.primeapps.io
      secretName: primeapps-wildcard-ssl
  rules:
    - host: studio.primeapps.io
      http:
        paths:
          - path: "/"
            backend:
              serviceName: primeapps-studio-service
              servicePort: 80
