charts/yaml/trudesk.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: trudesk
  namespace: trudesk
  labels:
    k8s-app: "trudesk"
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: trudesk
  template:
    metadata:
      labels:
        k8s-app: trudesk
    spec:
      volumes:
        - name: trudesk-storage-uploads
          persistentVolumeClaim:
            claimName: trudesk-claim-uploads
        - name: trudesk-storage-plugins
          persistentVolumeClaim:
            claimName: trudesk-claim-plugins
        - name: trudesk-storage-backup
          persistentVolumeClaim:
            claimName: trudesk-claim-backup
      containers:
        - name: trudesk
          image: polonel/trudesk:1.0.15
          volumeMounts:
            - mountPath: "/data/trudesk/uploads"
              name: trudesk-storage-uploads
            - mountPath: "/data/trudesk/plugins"
              name: "trudesk-storage-plugins"
            - mountPath: "/data/trudesk/backups"
              name: trudesk-storage-backup
---
kind: Service
apiVersion: v1
metadata:
  name: trudesk-service
  namespace: trudesk
spec:
  type: "ClusterIP"
  selector:
    k8s-app: trudesk
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 8118
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: trudesk-ingress
  namespace: trudesk
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - tech.primeapps.io
      secretName: primeapps-wildcard-ssl
  rules:
    - host: tech.primeapps.io
      http:
        paths:
          - path: "/"
            backend:
              serviceName: trudesk-service
              servicePort: 80
